# wengine

./: .gitignore  CMakeLists.txt  Makefile  Makefile.old  README.md  compile_flags.txt  imgui.ini  old.Makefile
engine/: .clang-format  compile_flags.txt
engine/include/: camera.hpp  gui.hpp  shader.hpp  window.hpp
engine/include/wengine/: gui.hpp  resourceManager.hpp  shader.hpp  texture.hpp  window.hpp
engine/src/: camera.cpp  gui.cpp  main.cpp  shader.cpp  window.cpp
engine/src/engine/: camera.cpp  gui.cpp  model.cpp  resourceManager.cpp  shader.cpp  texture.cpp  window.cpp
examples/: CMakeLists.txt
examples/main/: CMakeLists.txt
examples/main/shader/: uiVertex.vert  vertex.shader
examples/main/src/: main.cpp
include/GLFW/: glfw3.h
include/glad/: CMakeLists.txt
include/glm/gtx/: rotate_normalized_axis.inl
include/imgui/: CMakeLists.txt
include/wengine/: camera.hpp  model.hpp  texture.hpp
res/model/: testObject.blend
shader/: fragment.shader  vertex.shader
src/: main.cpp
src/wengine/core/: camera.cpp  engine.cpp  model.cpp  model.hpp  resourceManager.cpp  resourceManager.hpp  shader.cpp  shader.hpp  texture.cpp  window.cpp
src/wengine/gui/: element.cpp  element.hpp  gui.cpp  gui.hpp
wengine/: CMakeLists.txt  Makefile
wengine/build;/: CMakeCache.txt
wengine/include/glad/: glad.c  glad.h
wengine/include/wengine/: engine.hpp  model.hpp  resourceManager.hpp  shader.hpp
wengine/lib/wengine/: glad.lib  imgui.lib  wengine.lib
wengine/src/core/: engine.cpp  gui.cpp  model.cpp  resourceManager.cpp  shader.cpp  texture.cpp
